# ship-detector

./: README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json
src/: main.ts  phisics.html  phisics.ts
typescript/: index.html  package-lock.json
typescript/src/: main.ts
typescript/src/webgpu/: main.ts
